vlib/v/checker/tests/variadic_value_print_err.vv
a := [1, 2, 3]
println(...a)
